# HILLEL_CPP.PRO_HW.6

./: .gitignore  CMakeLists.txt  main.cpp
include/: DetailedReportVisitor.h  Logger.h  ShortReportVisitor.h  Transaction.h  TransactionVisitor.h
src/: DetailedReportVisitor.cpp  Logger.cpp  ShortReportVisitor.cpp  Transaction.cpp
